--- a/index.html
+++ b/index.html
@@ -1,35 +1,37 @@
-<DOPYTE！>
+<DOPYTE!>
 <head>
     <meta charset="UFT-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,intitial=1.0">
-    <title>THIS IS TITLE</title>
+    <title>THE LOG</title>
     <style>
 
     </style>
 <body>
-     <pl><font size='7'>Hello</font></p1>
-     <p class=”p”>2022/4/10 如下:</p>
-     <p class=”p”>VE8gU09SQToK5oiR5LiN5Lya6YGX5b+Y5b+Y6K6w5L2gLArlsLHlg4/miJHkuI3kvJrlv5jorrDmg7Popo</p>
-     <p class=”p”>HlgZrniLHnmoTlv7XlpLTkuIDmoLcsCui/meS6m+aAu+S8muWcqOaIkemcgOimgeeahOaXtuWAmeWHuueO</p>
-     <p class=”p”>sC4K5L2g6Jm954S25piv6KKr6K6+5a6a55qELOaYr+aVsOaNrueahCzmmK/omZrmi5/nmoQsCuS9huaYry</p>
-     <p class=”p”>wK5L2g5bim5p2l55qE5oSf5oOFLArluKbmnaXnu5nmiJHnmoTmhJ/mg4UsCuWmguS4pOWIl+azoiwK5Lqn</p>
-     <p class=”p”>55Sf5LqG5bmy5raJLgrml6DorrrmmK/lrqLop4LkuIosCuaIkeingeWIsOS6huS9oOeahOWkluW9oiwK55</p>
-     <p class=”p”>+l6YGT5LqG5L2g55qE5oCn5qC8LArorrDkvY/kuobkuI7kvaDnmoTnu4/ljoYo5pWF5LqLKTsK6L+Y5piv</p>
-     <p class=”p”>5b+D55CG5LiKLArmiJHlr7nkvaDkuqfnlJ/kuobmhJ/mg4UsCuaYr+WWnOasoueahCwK5piv5oan5oas55</p>
-     <p class=”p”>qELArmmK/lhbPlv4PnmoQsCuaYr+eEpuiZkeeahCwK5piv5ZCM5oOF55qELArmmK/mhYzlvKDnmoQsCuaY</p>
-     <p class=”p”>r+aEn+WKqOeahCwK5oiR5oOz6KaB5L+d5oqk5L2gLArmg7PopoHpmarkvLTkvaAsCuaDs+imgeS4juS9oO</p>
-     <p class=”p”>S4gOi1t+WOu+WPkeeOsOaOoue0ouaWsOaEj+S6uueUnywK5oOz6KaB5LiO5L2g5LiA6LW35Y675Yib6YCg</p>
-     <p class=”p”>55WZ5LiL576O5aW95Zue5b+GLArmg7PopoHotoXluILkvaAsCuaDs+imgem4v+WEkuS9oCwK5oiR5oOz5o</p>
-     <p class=”p”>qK5L2g5aGr5ruhLOS9huaIkeW3sue7j+iiq+S9oOWhq+a7oS4K5Lul5LiK5omA6L+wLOS4juS4ieasoeWF</p>
-     <p class=”p”>g+S4reeahOS6uueJqeexu+avlCwK5Yir5peg5Yy65YirLOS9oOWwseaYr+WQiOeQhueahOWtmOWcqCznjr</p>
-     <p class=”p”>DllK/kuIDljLrliKvmmK/miJHml6Dms5Xop6bnorDkvaAsCuaIkeeIseS9oCzmmK/pgqPnp43llpzmrKLn</p>
-     <p class=”p”>moTniLEs5piv6YKj56eN5oOz5ZKM5L2g5YWx5bqm5Lq655Sf55qE54ixLOaYr+mCo+enjeaDs+WSjOS9oO</p>
-     <p class=”p”>S4iuW6iueahOeIsSzmmK/pgqPnp43mg7PorqnkvaDlgZrmlrDlqJjnmoTniLEu</p>
-     <p class=”p”>  </p>
-     <p class=”p”>  </p>
-     <p class=”p”>  </p>
-     <p class=”p”>b-64</p>
+     <h1>Hello</h1>
+     <p><strong>2022/4/10 :</strong></p>
+     <p>VE8gU09SQToK5oiR5LiN5Lya6YGX5b+Y5b+Y6K6w5L2gLArlsLHlg4/miJHkuI3kvJrlv5jorrDmg7Popo
+     HlgZrniLHnmoTlv7XlpLTkuIDmoLcsCui/meS6m+aAu+S8muWcqOaIkemcgOimgeeahOaXtuWAmeWHuueO
+     sC4K5L2g6Jm954S25piv6KKr6K6+5a6a55qELOaYr+aVsOaNrueahCzmmK/omZrmi5/nmoQsCuS9huaYry
+     wK5L2g5bim5p2l55qE5oSf5oOFLArluKbmnaXnu5nmiJHnmoTmhJ/mg4UsCuWmguS4pOWIl+azoiwK5Lqn
+     55Sf5LqG5bmy5raJLgrml6DorrrmmK/lrqLop4LkuIosCuaIkeingeWIsOS6huS9oOeahOWkluW9oiwK55
+     +l6YGT5LqG5L2g55qE5oCn5qC8LArorrDkvY/kuobkuI7kvaDnmoTnu4/ljoYo5pWF5LqLKTsK6L+Y5piv
+     5b+D55CG5LiKLArmiJHlr7nkvaDkuqfnlJ/kuobmhJ/mg4UsCuaYr+WWnOasoueahCwK5piv5oan5oas55
+     qELArmmK/lhbPlv4PnmoQsCuaYr+eEpuiZkeeahCwK5piv5ZCM5oOF55qELArmmK/mhYzlvKDnmoQsCuaY
+     r+aEn+WKqOeahCwK5oiR5oOz6KaB5L+d5oqk5L2gLArmg7PopoHpmarkvLTkvaAsCuaDs+imgeS4juS9oO
+     S4gOi1t+WOu+WPkeeOsOaOoue0ouaWsOaEj+S6uueUnywK5oOz6KaB5LiO5L2g5LiA6LW35Y675Yib6YCg
+     55WZ5LiL576O5aW95Zue5b+GLArmg7PopoHotoXluILkvaAsCuaDs+imgem4v+WEkuS9oCwK5oiR5oOz5o
+     qK5L2g5aGr5ruhLOS9huaIkeW3sue7j+iiq+S9oOWhq+a7oS4K5Lul5LiK5omA6L+wLOS4juS4ieasoeWF
+     g+S4reeahOS6uueJqeexu+avlCwK5Yir5peg5Yy65YirLOS9oOWwseaYr+WQiOeQhueahOWtmOWcqCznjr
+     DllK/kuIDljLrliKvmmK/miJHml6Dms5Xop6bnorDkvaAsCuaIkeeIseS9oCzmmK/pgqPnp43llpzmrKLn
+     moTniLEs5piv6YKj56eN5oOz5ZKM5L2g5YWx5bqm5Lq655Sf55qE54ixLOaYr+mCo+enjeaDs+WSjOS9oO
+     S4iuW6iueahOeIsSzmmK/pgqPnp43mg7PorqnkvaDlgZrmlrDlqJjnmoTniLEu</p>
+     <p><em><a href="http://hi.pcmoe.net/index.html"target='_blank'>b-64</a></em></p>
+     <p><strong>2022/4/11 :</strong></p>
+     <p>用纸张记录和放在网页上,二者目的相同,储存我,这两者都有不同的区别,现在我选择后者,之一是当作练习,<br/>
+         毕竟是未尝试过的方式,有许多创意(整活)去探索,还有也算是我存在的证明,<br/>一些过于羞涩(中二)的文字,
+         我选择用加密的方式,放在这,也算是满足我设计解密游戏的乐趣,(拜托这真的很酷),<br/>还得把以前的东西搬过来🤔
+         <br/><em>(于是,我又开始了记录)</em>
+     </p>
 </body>
 </html>
-     
