--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,intitial=1.0">
     <title>THE LOG</title>
     <style>
-
+body{text-align:center} 
     </style>
 <body>
      <h1>Hello</h1>
@@ -33,5 +33,31 @@
          我选择用加密的方式,放在这,也算是满足我设计解密游戏的乐趣,(拜托这真的很酷),<br/>还得把以前的东西搬过来🤔
          <br/><em>(于是,我又开始了记录)</em>
      </p>
+    <p><strong>2022/4/11 :</strong></p>
+     <p>用纸张记录和放在网页上,二者目的相同,储存我,这两者都有不同的区别,现在我选择后者,之一是当作练习,<br/>
+         毕竟是未尝试过的方式,有许多创意(整活)去探索,还有也算是我存在的证明,<br/>一些过于羞涩(中二)的文字,
+         我选择用加密的方式,放在这,也算是满足我设计解密游戏的乐趣,(拜托这真的很酷),<br/>还得把以前的东西搬过来🤔
+         <br/><em>(于是,我又开始了记录)</em>
+     </p>
+     <p><strong>7/21 2022 羽历八年:</strong></p> 
+     <p>In:Time is gentel.Always make us choose,but always forget.<br/>
+        时间残酷,总让我们做出选择,而我总是错过.<br/>
+   Su:持理永存                                     <br/>
+   Co:不断的认识自我,批判意识,寻找目标,执行计划<br/>
+      却又不断的忘记自己,迷失过去,失信于当<br/>
+      因为没有大海,所以为何建立灯塔<br/>
+      因为没有灯塔,所以为何冒险海洋<br/>
+      最初的目的就是为了找到属于我的真理<br/>
+      我不能背叛过去的我<br/>
+      信念犹在,记忆犹存,但又认为是失败<br/>
+      为何<br/>
+      没有笃行自己的道理<br/>
+      一路高歌吧<br/>
+      就算拖沓在泥沼<br/>
+      就算咽气于浑水<br/>
+      只要我所谓我认为的道理在我记忆之中<br/>
+      我就会永存真理<br/>
+      持理永存<br/>
+   </p>
 </body>
 </html>
