--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@ body{text-align:center}
 <body>
      <h1>Hello</h1>
      <p><strong>2022/4/10 :</strong></p>
-     <p>VE8gU09SQToK5oiR5LiN5Lya6YGX5b+Y5b+Y6K6w5L2gLArlsLHlg4/miJHkuI3kvJrlv5jorrDmg7Popo
-     HlgZrniLHnmoTlv7XlpLTkuIDmoLcsCui/meS6m+aAu+S8muWcqOaIkemcgOimgeeahOaXtuWAmeWHuueO
-     sC4K5L2g6Jm954S25piv6KKr6K6+5a6a55qELOaYr+aVsOaNrueahCzmmK/omZrmi5/nmoQsCuS9huaYry
-     wK5L2g5bim5p2l55qE5oSf5oOFLArluKbmnaXnu5nmiJHnmoTmhJ/mg4UsCuWmguS4pOWIl+azoiwK5Lqn
-     55Sf5LqG5bmy5raJLgrml6DorrrmmK/lrqLop4LkuIosCuaIkeingeWIsOS6huS9oOeahOWkluW9oiwK55
-     +l6YGT5LqG5L2g55qE5oCn5qC8LArorrDkvY/kuobkuI7kvaDnmoTnu4/ljoYo5pWF5LqLKTsK6L+Y5piv
-     5b+D55CG5LiKLArmiJHlr7nkvaDkuqfnlJ/kuobmhJ/mg4UsCuaYr+WWnOasoueahCwK5piv5oan5oas55
-     qELArmmK/lhbPlv4PnmoQsCuaYr+eEpuiZkeeahCwK5piv5ZCM5oOF55qELArmmK/mhYzlvKDnmoQsCuaY
-     r+aEn+WKqOeahCwK5oiR5oOz6KaB5L+d5oqk5L2gLArmg7PopoHpmarkvLTkvaAsCuaDs+imgeS4juS9oO
-     S4gOi1t+WOu+WPkeeOsOaOoue0ouaWsOaEj+S6uueUnywK5oOz6KaB5LiO5L2g5LiA6LW35Y675Yib6YCg
-     55WZ5LiL576O5aW95Zue5b+GLArmg7PopoHotoXluILkvaAsCuaDs+imgem4v+WEkuS9oCwK5oiR5oOz5o
-     qK5L2g5aGr5ruhLOS9huaIkeW3sue7j+iiq+S9oOWhq+a7oS4K5Lul5LiK5omA6L+wLOS4juS4ieasoeWF
-     g+S4reeahOS6uueJqeexu+avlCwK5Yir5peg5Yy65YirLOS9oOWwseaYr+WQiOeQhueahOWtmOWcqCznjr
-     DllK/kuIDljLrliKvmmK/miJHml6Dms5Xop6bnorDkvaAsCuaIkeeIseS9oCzmmK/pgqPnp43llpzmrKLn
-     moTniLEs5piv6YKj56eN5oOz5ZKM5L2g5YWx5bqm5Lq655Sf55qE54ixLOaYr+mCo+enjeaDs+WSjOS9oO
-     S4iuW6iueahOeIsSzmmK/pgqPnp43mg7PorqnkvaDlgZrmlrDlqJjnmoTniLEu</p>
+     <p>VE8gU09SQToK5oiR5LiN5Lya6YGX5b+Y5b+Y6K6w5L2gLArlsLHlg4/miJHkuI3kvJrlv5jorrDmg7Popo<br/>
+     HlgZrniLHnmoTlv7XlpLTkuIDmoLcsCui/meS6m+aAu+S8muWcqOaIkemcgOimgeeahOaXtuWAmeWHuueO<br/>
+     sC4K5L2g6Jm954S25piv6KKr6K6+5a6a55qELOaYr+aVsOaNrueahCzmmK/omZrmi5/nmoQsCuS9huaYry<br/>
+     wK5L2g5bim5p2l55qE5oSf5oOFLArluKbmnaXnu5nmiJHnmoTmhJ/mg4UsCuWmguS4pOWIl+azoiwK5Lqn<br/>
+     55Sf5LqG5bmy5raJLgrml6DorrrmmK/lrqLop4LkuIosCuaIkeingeWIsOS6huS9oOeahOWkluW9oiwK55<br/>
+     +l6YGT5LqG5L2g55qE5oCn5qC8LArorrDkvY/kuobkuI7kvaDnmoTnu4/ljoYo5pWF5LqLKTsK6L+Y5piv<br/>
+     5b+D55CG5LiKLArmiJHlr7nkvaDkuqfnlJ/kuobmhJ/mg4UsCuaYr+WWnOasoueahCwK5piv5oan5oas55<br/>
+     qELArmmK/lhbPlv4PnmoQsCuaYr+eEpuiZkeeahCwK5piv5ZCM5oOF55qELArmmK/mhYzlvKDnmoQsCuaY<br/>
+     r+aEn+WKqOeahCwK5oiR5oOz6KaB5L+d5oqk5L2gLArmg7PopoHpmarkvLTkvaAsCuaDs+imgeS4juS9oO<br/>
+     S4gOi1t+WOu+WPkeeOsOaOoue0ouaWsOaEj+S6uueUnywK5oOz6KaB5LiO5L2g5LiA6LW35Y675Yib6YCg<br/>
+     55WZ5LiL576O5aW95Zue5b+GLArmg7PopoHotoXluILkvaAsCuaDs+imgem4v+WEkuS9oCwK5oiR5oOz5o<br/>
+     qK5L2g5aGr5ruhLOS9huaIkeW3sue7j+iiq+S9oOWhq+a7oS4K5Lul5LiK5omA6L+wLOS4juS4ieasoeWF<br/>
+     g+S4reeahOS6uueJqeexu+avlCwK5Yir5peg5Yy65YirLOS9oOWwseaYr+WQiOeQhueahOWtmOWcqCznjr<br/>
+     DllK/kuIDljLrliKvmmK/miJHml6Dms5Xop6bnorDkvaAsCuaIkeeIseS9oCzmmK/pgqPnp43llpzmrKLn<br/>
+     moTniLEs5piv6YKj56eN5oOz5ZKM5L2g5YWx5bqm5Lq655Sf55qE54ixLOaYr+mCo+enjeaDs+WSjOS9oO<br/>
+     S4iuW6iueahOeIsSzmmK/pgqPnp43mg7PorqnkvaDlgZrmlrDlqJjnmoTniLEu</p><br/>
      <p><em><a href="http://hi.pcmoe.net/index.html"target='_blank'>b-64</a></em></p>
      <p><strong>2022/4/11 :</strong></p>
      <p>用纸张记录和放在网页上,二者目的相同,储存我,这两者都有不同的区别,现在我选择后者,之一是当作练习,<br/>
