--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body{text-align:center}
      g+S4reeahOS6uueJqeexu+avlCwK5Yir5peg5Yy65YirLOS9oOWwseaYr+WQiOeQhueahOWtmOWcqCznjr<br/>
      DllK/kuIDljLrliKvmmK/miJHml6Dms5Xop6bnorDkvaAsCuaIkeeIseS9oCzmmK/pgqPnp43llpzmrKLn<br/>
      moTniLEs5piv6YKj56eN5oOz5ZKM5L2g5YWx5bqm5Lq655Sf55qE54ixLOaYr+mCo+enjeaDs+WSjOS9oO<br/>
-     S4iuW6iueahOeIsSzmmK/pgqPnp43mg7PorqnkvaDlgZrmlrDlqJjnmoTniLEu</p><br/>
+     S4iuW6iueahOeIsSzmmK/pgqPnp43mg7PorqnkvaDlgZrmlrDlqJjnmoTniLEu</p>
      <p><em><a href="http://hi.pcmoe.net/index.html"target='_blank'>b-64</a></em></p>
      <p><strong>2022/4/11 :</strong></p>
      <p>用纸张记录和放在网页上,二者目的相同,储存我,这两者都有不同的区别,现在我选择后者,之一是当作练习,<br/>
